parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SELF_TYPE

Grammar

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     class_list -> class_list class SEMICOLON
Rule 3     class_list -> class SEMICOLON
Rule 4     class -> CLASS TYPEID LBRACE feature_list RBRACE
Rule 5     class -> CLASS TYPEID INHERITS TYPEID LBRACE feature_list RBRACE
Rule 6     feature_list -> feature_list feature SEMICOLON
Rule 7     feature_list -> empty
Rule 8     feature -> OBJECTID LPAREN param_list RPAREN COLON TYPEID LBRACE expr RBRACE
Rule 9     feature -> OBJECTID COLON TYPEID ASSIGN expr
Rule 10    feature -> OBJECTID COLON TYPEID
Rule 11    param_list -> param_list COMMA formal
Rule 12    param_list -> formal
Rule 13    param_list -> empty
Rule 14    formal -> OBJECTID COLON TYPEID
Rule 15    expr -> OBJECTID ASSIGN expr
Rule 16    expr -> expr DOT OBJECTID LPAREN arg_list RPAREN
Rule 17    expr -> expr AT TYPEID DOT OBJECTID LPAREN arg_list RPAREN
Rule 18    expr -> OBJECTID LPAREN arg_list RPAREN
Rule 19    expr -> IF expr THEN expr ELSE expr FI
Rule 20    expr -> WHILE expr LOOP expr POOL
Rule 21    expr -> LBRACE expr_list RBRACE
Rule 22    expr_list -> expr_list expr SEMICOLON
Rule 23    expr_list -> expr SEMICOLON
Rule 24    expr -> LET let_bindings IN expr
Rule 25    let_bindings -> let_bindings COMMA let_binding
Rule 26    let_bindings -> let_binding
Rule 27    let_binding -> OBJECTID COLON TYPEID ASSIGN expr
Rule 28    let_binding -> OBJECTID COLON TYPEID
Rule 29    expr -> CASE expr OF case_list ESAC
Rule 30    case_list -> case_list case_branch
Rule 31    case_list -> case_branch
Rule 32    case_branch -> OBJECTID COLON TYPEID DARROW expr SEMICOLON
Rule 33    expr -> NEW TYPEID
Rule 34    expr -> ISVOID expr
Rule 35    expr -> expr PLUS expr
Rule 36    expr -> expr MINUS expr
Rule 37    expr -> expr MULT expr
Rule 38    expr -> expr DIV expr
Rule 39    expr -> expr LT expr
Rule 40    expr -> expr LE expr
Rule 41    expr -> expr EQ expr
Rule 42    expr -> NOT expr
Rule 43    expr -> TILDE expr
Rule 44    expr -> LPAREN expr RPAREN
Rule 45    expr -> OBJECTID
Rule 46    expr -> INT_CONST
Rule 47    expr -> STR_CONST
Rule 48    expr -> BOOL_CONST
Rule 49    expr -> SELF
Rule 50    arg_list -> arg_list COMMA expr
Rule 51    arg_list -> expr
Rule 52    arg_list -> empty
Rule 53    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 9 15 27
AT                   : 17
BOOL_CONST           : 48
CASE                 : 29
CLASS                : 4 5
COLON                : 8 9 10 14 27 28 32
COMMA                : 11 25 50
DARROW               : 32
DIV                  : 38
DOT                  : 16 17
ELSE                 : 19
EQ                   : 41
ESAC                 : 29
FI                   : 19
IF                   : 19
IN                   : 24
INHERITS             : 5
INT_CONST            : 46
ISVOID               : 34
LBRACE               : 4 5 8 21
LE                   : 40
LET                  : 24
LOOP                 : 20
LPAREN               : 8 16 17 18 44
LT                   : 39
MINUS                : 36
MULT                 : 37
NEW                  : 33
NOT                  : 42
OBJECTID             : 8 9 10 14 15 16 17 18 27 28 32 45
OF                   : 29
PLUS                 : 35
POOL                 : 20
RBRACE               : 4 5 8 21
RPAREN               : 8 16 17 18 44
SELF                 : 49
SELF_TYPE            : 
SEMICOLON            : 2 3 6 22 23 32
STR_CONST            : 47
THEN                 : 19
TILDE                : 43
TYPEID               : 4 5 5 8 9 10 14 17 27 28 32 33
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

arg_list             : 16 17 18 50
case_branch          : 30 31
case_list            : 29 30
class                : 2 3
class_list           : 1 2
empty                : 7 13 52
expr                 : 8 9 15 16 17 19 19 19 20 20 22 23 24 27 29 32 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 43 44 50 51
expr_list            : 21 22
feature              : 6
feature_list         : 4 5 6
formal               : 11 12
let_binding          : 25 26
let_bindings         : 24 25
param_list           : 8 11
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_list
    (2) class_list -> . class_list class SEMICOLON
    (3) class_list -> . class SEMICOLON
    (4) class -> . CLASS TYPEID LBRACE feature_list RBRACE
    (5) class -> . CLASS TYPEID INHERITS TYPEID LBRACE feature_list RBRACE

    CLASS           shift and go to state 4

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    class                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_list .
    (2) class_list -> class_list . class SEMICOLON
    (4) class -> . CLASS TYPEID LBRACE feature_list RBRACE
    (5) class -> . CLASS TYPEID INHERITS TYPEID LBRACE feature_list RBRACE

    $end            reduce using rule 1 (program -> class_list .)
    CLASS           shift and go to state 4

    class                          shift and go to state 5

state 3

    (3) class_list -> class . SEMICOLON

    SEMICOLON       shift and go to state 6


state 4

    (4) class -> CLASS . TYPEID LBRACE feature_list RBRACE
    (5) class -> CLASS . TYPEID INHERITS TYPEID LBRACE feature_list RBRACE

    TYPEID          shift and go to state 7


state 5

    (2) class_list -> class_list class . SEMICOLON

    SEMICOLON       shift and go to state 8


state 6

    (3) class_list -> class SEMICOLON .

    CLASS           reduce using rule 3 (class_list -> class SEMICOLON .)
    $end            reduce using rule 3 (class_list -> class SEMICOLON .)


state 7

    (4) class -> CLASS TYPEID . LBRACE feature_list RBRACE
    (5) class -> CLASS TYPEID . INHERITS TYPEID LBRACE feature_list RBRACE

    LBRACE          shift and go to state 9
    INHERITS        shift and go to state 10


state 8

    (2) class_list -> class_list class SEMICOLON .

    CLASS           reduce using rule 2 (class_list -> class_list class SEMICOLON .)
    $end            reduce using rule 2 (class_list -> class_list class SEMICOLON .)


state 9

    (4) class -> CLASS TYPEID LBRACE . feature_list RBRACE
    (6) feature_list -> . feature_list feature SEMICOLON
    (7) feature_list -> . empty
    (53) empty -> .

    RBRACE          reduce using rule 53 (empty -> .)
    OBJECTID        reduce using rule 53 (empty -> .)

    feature_list                   shift and go to state 11
    empty                          shift and go to state 12

state 10

    (5) class -> CLASS TYPEID INHERITS . TYPEID LBRACE feature_list RBRACE

    TYPEID          shift and go to state 13


state 11

    (4) class -> CLASS TYPEID LBRACE feature_list . RBRACE
    (6) feature_list -> feature_list . feature SEMICOLON
    (8) feature -> . OBJECTID LPAREN param_list RPAREN COLON TYPEID LBRACE expr RBRACE
    (9) feature -> . OBJECTID COLON TYPEID ASSIGN expr
    (10) feature -> . OBJECTID COLON TYPEID

    RBRACE          shift and go to state 14
    OBJECTID        shift and go to state 16

    feature                        shift and go to state 15

state 12

    (7) feature_list -> empty .

    RBRACE          reduce using rule 7 (feature_list -> empty .)
    OBJECTID        reduce using rule 7 (feature_list -> empty .)


state 13

    (5) class -> CLASS TYPEID INHERITS TYPEID . LBRACE feature_list RBRACE

    LBRACE          shift and go to state 17


state 14

    (4) class -> CLASS TYPEID LBRACE feature_list RBRACE .

    SEMICOLON       reduce using rule 4 (class -> CLASS TYPEID LBRACE feature_list RBRACE .)


state 15

    (6) feature_list -> feature_list feature . SEMICOLON

    SEMICOLON       shift and go to state 18


state 16

    (8) feature -> OBJECTID . LPAREN param_list RPAREN COLON TYPEID LBRACE expr RBRACE
    (9) feature -> OBJECTID . COLON TYPEID ASSIGN expr
    (10) feature -> OBJECTID . COLON TYPEID

    LPAREN          shift and go to state 19
    COLON           shift and go to state 20


state 17

    (5) class -> CLASS TYPEID INHERITS TYPEID LBRACE . feature_list RBRACE
    (6) feature_list -> . feature_list feature SEMICOLON
    (7) feature_list -> . empty
    (53) empty -> .

    RBRACE          reduce using rule 53 (empty -> .)
    OBJECTID        reduce using rule 53 (empty -> .)

    feature_list                   shift and go to state 21
    empty                          shift and go to state 12

state 18

    (6) feature_list -> feature_list feature SEMICOLON .

    RBRACE          reduce using rule 6 (feature_list -> feature_list feature SEMICOLON .)
    OBJECTID        reduce using rule 6 (feature_list -> feature_list feature SEMICOLON .)


state 19

    (8) feature -> OBJECTID LPAREN . param_list RPAREN COLON TYPEID LBRACE expr RBRACE
    (11) param_list -> . param_list COMMA formal
    (12) param_list -> . formal
    (13) param_list -> . empty
    (14) formal -> . OBJECTID COLON TYPEID
    (53) empty -> .

    OBJECTID        shift and go to state 22
    RPAREN          reduce using rule 53 (empty -> .)
    COMMA           reduce using rule 53 (empty -> .)

    param_list                     shift and go to state 23
    formal                         shift and go to state 24
    empty                          shift and go to state 25

state 20

    (9) feature -> OBJECTID COLON . TYPEID ASSIGN expr
    (10) feature -> OBJECTID COLON . TYPEID

    TYPEID          shift and go to state 26


state 21

    (5) class -> CLASS TYPEID INHERITS TYPEID LBRACE feature_list . RBRACE
    (6) feature_list -> feature_list . feature SEMICOLON
    (8) feature -> . OBJECTID LPAREN param_list RPAREN COLON TYPEID LBRACE expr RBRACE
    (9) feature -> . OBJECTID COLON TYPEID ASSIGN expr
    (10) feature -> . OBJECTID COLON TYPEID

    RBRACE          shift and go to state 27
    OBJECTID        shift and go to state 16

    feature                        shift and go to state 15

state 22

    (14) formal -> OBJECTID . COLON TYPEID

    COLON           shift and go to state 28


state 23

    (8) feature -> OBJECTID LPAREN param_list . RPAREN COLON TYPEID LBRACE expr RBRACE
    (11) param_list -> param_list . COMMA formal

    RPAREN          shift and go to state 29
    COMMA           shift and go to state 30


state 24

    (12) param_list -> formal .

    RPAREN          reduce using rule 12 (param_list -> formal .)
    COMMA           reduce using rule 12 (param_list -> formal .)


state 25

    (13) param_list -> empty .

    RPAREN          reduce using rule 13 (param_list -> empty .)
    COMMA           reduce using rule 13 (param_list -> empty .)


state 26

    (9) feature -> OBJECTID COLON TYPEID . ASSIGN expr
    (10) feature -> OBJECTID COLON TYPEID .

    ASSIGN          shift and go to state 31
    SEMICOLON       reduce using rule 10 (feature -> OBJECTID COLON TYPEID .)


state 27

    (5) class -> CLASS TYPEID INHERITS TYPEID LBRACE feature_list RBRACE .

    SEMICOLON       reduce using rule 5 (class -> CLASS TYPEID INHERITS TYPEID LBRACE feature_list RBRACE .)


state 28

    (14) formal -> OBJECTID COLON . TYPEID

    TYPEID          shift and go to state 32


state 29

    (8) feature -> OBJECTID LPAREN param_list RPAREN . COLON TYPEID LBRACE expr RBRACE

    COLON           shift and go to state 33


state 30

    (11) param_list -> param_list COMMA . formal
    (14) formal -> . OBJECTID COLON TYPEID

    OBJECTID        shift and go to state 22

    formal                         shift and go to state 34

state 31

    (9) feature -> OBJECTID COLON TYPEID ASSIGN . expr
    (15) expr -> . OBJECTID ASSIGN expr
    (16) expr -> . expr DOT OBJECTID LPAREN arg_list RPAREN
    (17) expr -> . expr AT TYPEID DOT OBJECTID LPAREN arg_list RPAREN
    (18) expr -> . OBJECTID LPAREN arg_list RPAREN
    (19) expr -> . IF expr THEN expr ELSE expr FI
    (20) expr -> . WHILE expr LOOP expr POOL
    (21) expr -> . LBRACE expr_list RBRACE
    (24) expr -> . LET let_bindings IN expr
    (29) expr -> . CASE expr OF case_list ESAC
    (33) expr -> . NEW TYPEID
    (34) expr -> . ISVOID expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr MINUS expr
    (37) expr -> . expr MULT expr
    (38) expr -> . expr DIV expr
    (39) expr -> . expr LT expr
    (40) expr -> . expr LE expr
    (41) expr -> . expr EQ expr
    (42) expr -> . NOT expr
    (43) expr -> . TILDE expr
    (44) expr -> . LPAREN expr RPAREN
    (45) expr -> . OBJECTID
    (46) expr -> . INT_CONST
    (47) expr -> . STR_CONST
    (48) expr -> . BOOL_CONST
    (49) expr -> . SELF

    OBJECTID        shift and go to state 35
    IF              shift and go to state 38
    WHILE           shift and go to state 39
    LBRACE          shift and go to state 40
    LET             shift and go to state 41
    CASE            shift and go to state 42
    NEW             shift and go to state 43
    ISVOID          shift and go to state 44
    NOT             shift and go to state 45
    TILDE           shift and go to state 46
    LPAREN          shift and go to state 37
    INT_CONST       shift and go to state 47
    STR_CONST       shift and go to state 48
    BOOL_CONST      shift and go to state 49
    SELF            shift and go to state 50

    expr                           shift and go to state 36

state 32

    (14) formal -> OBJECTID COLON TYPEID .

    RPAREN          reduce using rule 14 (formal -> OBJECTID COLON TYPEID .)
    COMMA           reduce using rule 14 (formal -> OBJECTID COLON TYPEID .)


state 33

    (8) feature -> OBJECTID LPAREN param_list RPAREN COLON . TYPEID LBRACE expr RBRACE

    TYPEID          shift and go to state 51


state 34

    (11) param_list -> param_list COMMA formal .

    RPAREN          reduce using rule 11 (param_list -> param_list COMMA formal .)
    COMMA           reduce using rule 11 (param_list -> param_list COMMA formal .)


state 35

    (15) expr -> OBJECTID . ASSIGN expr
    (18) expr -> OBJECTID . LPAREN arg_list RPAREN
    (45) expr -> OBJECTID .

    ASSIGN          shift and go to state 52
    LPAREN          shift and go to state 53
    DOT             reduce using rule 45 (expr -> OBJECTID .)
    AT              reduce using rule 45 (expr -> OBJECTID .)
    PLUS            reduce using rule 45 (expr -> OBJECTID .)
    MINUS           reduce using rule 45 (expr -> OBJECTID .)
    MULT            reduce using rule 45 (expr -> OBJECTID .)
    DIV             reduce using rule 45 (expr -> OBJECTID .)
    LT              reduce using rule 45 (expr -> OBJECTID .)
    LE              reduce using rule 45 (expr -> OBJECTID .)
    EQ              reduce using rule 45 (expr -> OBJECTID .)
    SEMICOLON       reduce using rule 45 (expr -> OBJECTID .)
    RPAREN          reduce using rule 45 (expr -> OBJECTID .)
    THEN            reduce using rule 45 (expr -> OBJECTID .)
    LOOP            reduce using rule 45 (expr -> OBJECTID .)
    OF              reduce using rule 45 (expr -> OBJECTID .)
    COMMA           reduce using rule 45 (expr -> OBJECTID .)
    RBRACE          reduce using rule 45 (expr -> OBJECTID .)
    ELSE            reduce using rule 45 (expr -> OBJECTID .)
    POOL            reduce using rule 45 (expr -> OBJECTID .)
    FI              reduce using rule 45 (expr -> OBJECTID .)
    IN              reduce using rule 45 (expr -> OBJECTID .)


state 36

    (9) feature -> OBJECTID COLON TYPEID ASSIGN expr .
    (16) expr -> expr . DOT OBJECTID LPAREN arg_list RPAREN
    (17) expr -> expr . AT TYPEID DOT OBJECTID LPAREN arg_list RPAREN
    (35) expr -> expr . PLUS expr
    (36) expr -> expr . MINUS expr
    (37) expr -> expr . MULT expr
    (38) expr -> expr . DIV expr
    (39) expr -> expr . LT expr
    (40) expr -> expr . LE expr
    (41) expr -> expr . EQ expr

    SEMICOLON       reduce using rule 9 (feature -> OBJECTID COLON TYPEID ASSIGN expr .)
    DOT             shift and go to state 54
    AT              shift and go to state 55
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    MULT            shift and go to state 58
    DIV             shift and go to state 59
    LT              shift and go to state 60
    LE              shift and go to state 61
    EQ              shift and go to state 62


state 37

    (44) expr -> LPAREN . expr RPAREN
    (15) expr -> . OBJECTID ASSIGN expr
    (16) expr -> . expr DOT OBJECTID LPAREN arg_list RPAREN
    (17) expr -> . expr AT TYPEID DOT OBJECTID LPAREN arg_list RPAREN
    (18) expr -> . OBJECTID LPAREN arg_list RPAREN
    (19) expr -> . IF expr THEN expr ELSE expr FI
    (20) expr -> . WHILE expr LOOP expr POOL
    (21) expr -> . LBRACE expr_list RBRACE
    (24) expr -> . LET let_bindings IN expr
    (29) expr -> . CASE expr OF case_list ESAC
    (33) expr -> . NEW TYPEID
    (34) expr -> . ISVOID expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr MINUS expr
    (37) expr -> . expr MULT expr
    (38) expr -> . expr DIV expr
    (39) expr -> . expr LT expr
    (40) expr -> . expr LE expr
    (41) expr -> . expr EQ expr
    (42) expr -> . NOT expr
    (43) expr -> . TILDE expr
    (44) expr -> . LPAREN expr RPAREN
    (45) expr -> . OBJECTID
    (46) expr -> . INT_CONST
    (47) expr -> . STR_CONST
    (48) expr -> . BOOL_CONST
    (49) expr -> . SELF

    OBJECTID        shift and go to state 35
    IF              shift and go to state 38
    WHILE           shift and go to state 39
    LBRACE          shift and go to state 40
    LET             shift and go to state 41
    CASE            shift and go to state 42
    NEW             shift and go to state 43
    ISVOID          shift and go to state 44
    NOT             shift and go to state 45
    TILDE           shift and go to state 46
    LPAREN          shift and go to state 37
    INT_CONST       shift and go to state 47
    STR_CONST       shift and go to state 48
    BOOL_CONST      shift and go to state 49
    SELF            shift and go to state 50

    expr                           shift and go to state 63

state 38

    (19) expr -> IF . expr THEN expr ELSE expr FI
    (15) expr -> . OBJECTID ASSIGN expr
    (16) expr -> . expr DOT OBJECTID LPAREN arg_list RPAREN
    (17) expr -> . expr AT TYPEID DOT OBJECTID LPAREN arg_list RPAREN
    (18) expr -> . OBJECTID LPAREN arg_list RPAREN
    (19) expr -> . IF expr THEN expr ELSE expr FI
    (20) expr -> . WHILE expr LOOP expr POOL
    (21) expr -> . LBRACE expr_list RBRACE
    (24) expr -> . LET let_bindings IN expr
    (29) expr -> . CASE expr OF case_list ESAC
    (33) expr -> . NEW TYPEID
    (34) expr -> . ISVOID expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr MINUS expr
    (37) expr -> . expr MULT expr
    (38) expr -> . expr DIV expr
    (39) expr -> . expr LT expr
    (40) expr -> . expr LE expr
    (41) expr -> . expr EQ expr
    (42) expr -> . NOT expr
    (43) expr -> . TILDE expr
    (44) expr -> . LPAREN expr RPAREN
    (45) expr -> . OBJECTID
    (46) expr -> . INT_CONST
    (47) expr -> . STR_CONST
    (48) expr -> . BOOL_CONST
    (49) expr -> . SELF

    OBJECTID        shift and go to state 35
    IF              shift and go to state 38
    WHILE           shift and go to state 39
    LBRACE          shift and go to state 40
    LET             shift and go to state 41
    CASE            shift and go to state 42
    NEW             shift and go to state 43
    ISVOID          shift and go to state 44
    NOT             shift and go to state 45
    TILDE           shift and go to state 46
    LPAREN          shift and go to state 37
    INT_CONST       shift and go to state 47
    STR_CONST       shift and go to state 48
    BOOL_CONST      shift and go to state 49
    SELF            shift and go to state 50

    expr                           shift and go to state 64

state 39

    (20) expr -> WHILE . expr LOOP expr POOL
    (15) expr -> . OBJECTID ASSIGN expr
    (16) expr -> . expr DOT OBJECTID LPAREN arg_list RPAREN
    (17) expr -> . expr AT TYPEID DOT OBJECTID LPAREN arg_list RPAREN
    (18) expr -> . OBJECTID LPAREN arg_list RPAREN
    (19) expr -> . IF expr THEN expr ELSE expr FI
    (20) expr -> . WHILE expr LOOP expr POOL
    (21) expr -> . LBRACE expr_list RBRACE
    (24) expr -> . LET let_bindings IN expr
    (29) expr -> . CASE expr OF case_list ESAC
    (33) expr -> . NEW TYPEID
    (34) expr -> . ISVOID expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr MINUS expr
    (37) expr -> . expr MULT expr
    (38) expr -> . expr DIV expr
    (39) expr -> . expr LT expr
    (40) expr -> . expr LE expr
    (41) expr -> . expr EQ expr
    (42) expr -> . NOT expr
    (43) expr -> . TILDE expr
    (44) expr -> . LPAREN expr RPAREN
    (45) expr -> . OBJECTID
    (46) expr -> . INT_CONST
    (47) expr -> . STR_CONST
    (48) expr -> . BOOL_CONST
    (49) expr -> . SELF

    OBJECTID        shift and go to state 35
    IF              shift and go to state 38
    WHILE           shift and go to state 39
    LBRACE          shift and go to state 40
    LET             shift and go to state 41
    CASE            shift and go to state 42
    NEW             shift and go to state 43
    ISVOID          shift and go to state 44
    NOT             shift and go to state 45
    TILDE           shift and go to state 46
    LPAREN          shift and go to state 37
    INT_CONST       shift and go to state 47
    STR_CONST       shift and go to state 48
    BOOL_CONST      shift and go to state 49
    SELF            shift and go to state 50

    expr                           shift and go to state 65

state 40

    (21) expr -> LBRACE . expr_list RBRACE
    (22) expr_list -> . expr_list expr SEMICOLON
    (23) expr_list -> . expr SEMICOLON
    (15) expr -> . OBJECTID ASSIGN expr
    (16) expr -> . expr DOT OBJECTID LPAREN arg_list RPAREN
    (17) expr -> . expr AT TYPEID DOT OBJECTID LPAREN arg_list RPAREN
    (18) expr -> . OBJECTID LPAREN arg_list RPAREN
    (19) expr -> . IF expr THEN expr ELSE expr FI
    (20) expr -> . WHILE expr LOOP expr POOL
    (21) expr -> . LBRACE expr_list RBRACE
    (24) expr -> . LET let_bindings IN expr
    (29) expr -> . CASE expr OF case_list ESAC
    (33) expr -> . NEW TYPEID
    (34) expr -> . ISVOID expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr MINUS expr
    (37) expr -> . expr MULT expr
    (38) expr -> . expr DIV expr
    (39) expr -> . expr LT expr
    (40) expr -> . expr LE expr
    (41) expr -> . expr EQ expr
    (42) expr -> . NOT expr
    (43) expr -> . TILDE expr
    (44) expr -> . LPAREN expr RPAREN
    (45) expr -> . OBJECTID
    (46) expr -> . INT_CONST
    (47) expr -> . STR_CONST
    (48) expr -> . BOOL_CONST
    (49) expr -> . SELF

    OBJECTID        shift and go to state 35
    IF              shift and go to state 38
    WHILE           shift and go to state 39
    LBRACE          shift and go to state 40
    LET             shift and go to state 41
    CASE            shift and go to state 42
    NEW             shift and go to state 43
    ISVOID          shift and go to state 44
    NOT             shift and go to state 45
    TILDE           shift and go to state 46
    LPAREN          shift and go to state 37
    INT_CONST       shift and go to state 47
    STR_CONST       shift and go to state 48
    BOOL_CONST      shift and go to state 49
    SELF            shift and go to state 50

    expr_list                      shift and go to state 66
    expr                           shift and go to state 67

state 41

    (24) expr -> LET . let_bindings IN expr
    (25) let_bindings -> . let_bindings COMMA let_binding
    (26) let_bindings -> . let_binding
    (27) let_binding -> . OBJECTID COLON TYPEID ASSIGN expr
    (28) let_binding -> . OBJECTID COLON TYPEID

    OBJECTID        shift and go to state 70

    let_bindings                   shift and go to state 68
    let_binding                    shift and go to state 69

state 42
